feat: hoàn thsanfh workflow cho conversation và message
